# django-docker-prometheus-stack-template

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
django_app/: generate_secret.py
django_app/django_app/: settings.py  urls.py
docker/grafana/: grafana.ini
docker/grafana/dashboards/: djangoapp_stats.json
docker/prometheus/: node_exporter.rules.yml  prometheus.rules.yml  prometheus.yml
docker/prometheus/alertmanager/: alertmanager.yml
docker/prometheus/alertmanager/templates/: email.tmpl  slack.tmpl
requirements/: dev.txt  prod.txt
