[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8,<4"]

[project]
name = "django_app"
version = "0.1"
description = "Django webapp"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "Django>4.0,<5.0",
    "django-prometheus",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
]

[tool.pip-tools]
generate-hashes = true